ya encripta la contraseña offline
